tests/paczka1/small_fuzzy/39209019.err
Error in line 1: CkXWX3n2T A800 18,77
Error in line 4: CkXWX3n2T S178 37,2
Error in line 10: mF8UwJp A34u u0,5
Error in line 8: mF8UwJp A346 18,8
Error in line 2: MfvNq7kx7 A346 86,2
